--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Plan My Day</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <!-- UIkit CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/css/uikit.min.css" />
-    </head>
-    <body>
-   <!-- write your codes here  -->
 
+<head>
+    <title>Plan My Day</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+    <!-- write your codes here  -->
+    <header class="uk-navbar-container " uk-navbar uk-grid>
+        <!-- container for authorization and sign out button  -->
+        <div class="uk-navbar-item uk-navbar-left">
+            <button id="authorize_button" class="hidden">Authorize Google Calender</button>
+            <button id="signout_button" class="hidden">Sign Out</button>
+        </div>
+        <!-- website title container  -->
+        <div class="uk-navbar-item uk-navbar-center ">
+            <h1 class="uk-text-bold ">Plan My Day</h1>
+        </div>
+    </header>
+
+    <div class="uk-grid-match uk-grid-small uk-text-center " uk-grid>
+        <!-- daily schedule container  -->
+        <main class="uk-width-2-3@l">
+            <div class="uk-card uk-card-default uk-card-body">1-3@m</div>
+        </main>
+
+        <aside class="uk-width-expand@l uk-grid-match ">
+            <!-- weather container  -->
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-1@l uk-width-2-5@m ">
+                <div>Weather :PLEASE ADD YOUR CODE HERE</div>
+            </div>
+
+            <!-- news container  -->
+            <div class="uk-card uk-card-default uk-card-body uk-width-expand ">
+                <div>news: PLEASE ADD YOUR CODE HERE</div>
+            </div>
+        </aside>
+    </div>
 
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/js/uikit-icons.min.js"></script>
-    </body>
+</body>
+
 </html>
