--- a/index.html
+++ b/index.html
@@ -165,15 +165,19 @@
 
         <aside class="uk-width-expand@l ">
             <!-- weather container  -->
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-1@l uk-width-2-5@s ">
-                <div>Weather :PLEASE ADD YOUR CODE HERE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-1@l uk-width-2-5@s " id="weather-div">
+                <h3 style="display: inline" class="uk-card-title"></h3> 
+                <p></p>
+                <p></p>
+                <p></p>
+                <button class="uk-button uk-button-primary" id="forecast-button" uk-parallax="border-color: blue"><span uk-icon="icon: location"></span></button>
             </div>
 
 
 
             <!-- news container  -->
             <div class="uk-card uk-card-default uk-card-body uk-width-expand ">
-                <div>news: PLEASE ADD YOUR CODE HERE</div>
+                <div>News Section :PLEASE ADD YOUR CODE HERE</div>
             </div>
 
 
@@ -185,6 +189,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.7/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
