Added html and js for news section as well as changed weather to metric

--- a/index.html
+++ b/index.html
@@ -130,8 +130,29 @@
 
 
             <!-- news container  -->
-            <div class="uk-card uk-card-default uk-card-body uk-width-expand ">
-                <div>News Section :PLEASE ADD YOUR CODE HERE</div>
+            <div class='uk-card uk-card-default uk-card-body uk-width-expand'>
+
+                <h1 class="">Top Stories</h1>
+
+                <dl id='news' class='news uk-description-list uk-description-list-divider'>
+
+                    <dt>1.</dt>
+                    <dd><a class='artLink' id='artLink1'></a></dd>
+
+                    <dt>2.</dt>
+                    <dd><a class='artLink' id='artLink2'></a></dd>
+                
+                    <dt>3.</dt>
+                    <dd><a class='artLink' id='artLink3'></a></dd>
+
+                    <dt>4.</dt>
+                    <dd><a class='artLink' id='artLink4'></a></dd>
+
+                    <dt>5.</dt>
+                    <dd><a class='artLink' id='artLink5'></a></dd>
+
+                </dl>
+
             </div>
 
 
