Weather button now has a hover effect.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                 <p></p>
                 <p></p>
                 <p></p>
-                <button class="uk-button uk-button-primary" id="forecast-button" uk-parallax="border-color: blue"><span uk-icon="icon: location"></span></button>
+                <div class="uk-card uk-card-hover uk-card-default uk-position-top-right uk-position-small uk-margins-remove uk-padding-remove">
+                    <button class="uk-button uk-button-primary uk-margins-remove" id="forecast-button" uk-parallax="border-color: blue"><span uk-icon="icon: location"></span></button>
+                </div>
             </div>
 
 
