Star buttons now add their respective articles to the favorites tab, in the Daily News section.

--- a/index.html
+++ b/index.html
@@ -193,20 +193,20 @@
                         <dl id='news' class='news uk-description-list uk-description-list-divider'>
                             <dt></dt>
                             <dd><a class='artLink' id='artLink1'></a></dd>
-                            <dd><a uk-icon="star" id="favIcon1" class="iconStyle" style="float: right;"></a></dd>
+                            <dd><a uk-icon="star" id="favIcon1" class="iconStyle uk-animation-fast" style="float: right;"></a></dd>
                             <dt></dt>
                             <dd><a class='artLink' id='artLink2'></a></dd>
-                            <dd><a uk-icon="star" id="favIcon2" class="iconStyle" style="float: right;"></a></dd>
+                            <dd><a uk-icon="star" id="favIcon2" class="iconStyle uk-animation-fast" style="float: right;"></a></dd>
 
                             <dt></dt>
                             <dd><a class='artLink' id='artLink3'></a></dd>
-                            <dd><a uk-icon="star" id="favIcon3" class="iconStyle" style="float: right;"></a></dd>
+                            <dd><a uk-icon="star" id="favIcon3" class="iconStyle uk-animation-fast" style="float: right;"></a></dd>
                             <dt></dt>
                             <dd><a class='artLink' id='artLink4'></a></dd>
-                            <dd><a uk-icon="star" id="favIcon4" class="iconStyle" style="float: right;"></a></dd>
+                            <dd><a uk-icon="star" id="favIcon4" class="iconStyle uk-animation-fast" style="float: right;"></a></dd>
                             <dt></dt>
                             <dd><a class='artLink' id='artLink5'></a></dd>
-                            <dd><a uk-icon="star" id="favIcon5" class="iconStyle" style="float: right;"></a></dd>
+                            <dd><a uk-icon="star" id="favIcon5" class="iconStyle uk-animation-fast" style="float: right;"></a></dd>
                         </dl>
                     </li>
                     <li>
